--- a/src/app/heatmap/heatmap.css
+++ b/src/app/heatmap/heatmap.css
@@ -1,3 +1,43 @@
 h3{
-    color: orange;
+    color: #f44336;
+}
+
+.table-container {
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    min-width: 300px;
+    margin: 10px;
+}
+
+.map-margin{
+    margin: 20px;
+}
+  
+.table-header {
+    min-height: 64px;
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+    font-size: 20px;
+}
+
+.mat-table {
+    overflow: auto;
+}
+
+.mat-grid-tile-header{
+    background: #f44336 !important;
+}
+
+h3[_ngcontent-c5]{
+    color: white;
+}
+
+.id-table-width{
+    flex: 0 0 50px;
+}
+
+.colonia-table-width{
+    flex: 0 0 75px;
 }
