--- a/src/app/heatmap/heatmap.html
+++ b/src/app/heatmap/heatmap.html
@@ -1,19 +1,53 @@
 <md-progress-bar color="warn" mode="indeterminate" *ngIf="isLoading"></md-progress-bar>
-<ngui-map zoom="11" [center]="centerpoint" class="map-margin">
-    <heatmap-layer [data]="points"></heatmap-layer>
-</ngui-map>
-<md-grid-list cols="2" rowHeight="5:4" class="map-margin">
-    <md-grid-tile>
-        <md-grid-tile-header color="warn">
-            <h3>Eventos por tipo</h3>
-        </md-grid-tile-header>
+
+<div class="flex-inline">
+    <md-card class="flex-1">
+        <md-card-title>
+            IPH
+        </md-card-title>
+        <ngui-map zoom="11" [center]="centerpoint" class="map-margin">
+            <heatmap-layer [data]="points"></heatmap-layer>
+        </ngui-map>
+    </md-card>
+
+    <md-card class="flex-1">
+        <md-card-title>
+            Comandancia
+        </md-card-title>
+        <ngui-map zoom="11" [center]="centerpoint" class="map-margin">
+            <heatmap-layer [data]="points"></heatmap-layer>
+        </ngui-map>
+    </md-card>
+</div>
+
+<div class="flex-inline">
+    <md-card class="flex-1">
+        <md-card-title>
+            Grafica IPH
+        </md-card-title>
+        
+    </md-card>
+
+    <md-card class="flex-1">
+        <md-card-title>
+            Grafica Comandancia
+        </md-card-title>
+        
+    </md-card>
+</div>
+
+<div class="flex-inline">
+    <md-card class="flex-1">
+        <md-card-title>
+            Descripción
+        </md-card-title>
         <div class="table-container mat-elevation-z8">
             <md-table #table [dataSource]="dataSourceColonies">
 
                 <!-- Tipo Column -->
                 <ng-container cdkColumnDef="name">
                     <md-header-cell *cdkHeaderCellDef> Tipo </md-header-cell>
-                    <md-cell *cdkCellDef="let row"> {{row.name}} </md-cell>
+                    <md-cell *cdkCellDef="let row"> {{row.idEvent}} </md-cell>
                 </ng-container>
 
                 <!-- Numero Column -->
@@ -26,19 +60,20 @@
                 <md-row *cdkRowDef="let row; columns: displayedColumnsCounts;"></md-row>
             </md-table>
         </div>
-    </md-grid-tile>
-    <md-grid-tile>
-        <md-grid-tile-header>
-            <h3>Eventos por tipo-colonia</h3>
-        </md-grid-tile-header>
+    </md-card>
+
+    <md-card class="flex-1">
+        <md-card-title>
+            Descripción
+        </md-card-title>
         <div class="table-container mat-elevation-z8">
             <md-table #table [dataSource]="dataSourceColonies">
 
                 <!-- Tipo Column -->
                 <ng-container cdkColumnDef="name">
-                        <md-header-cell *cdkHeaderCellDef> Tipo </md-header-cell>
-                        <md-cell *cdkCellDef="let row"> {{row.name}} </md-cell>
-                    </ng-container>
+                    <md-header-cell *cdkHeaderCellDef> Tipo </md-header-cell>
+                    <md-cell *cdkCellDef="let row"> {{row.idEvent}} </md-cell>
+                </ng-container>
 
                 <!-- Colony Column -->
                 <ng-container cdkColumnDef="colony">
@@ -51,11 +86,10 @@
                     <md-header-cell *cdkHeaderCellDef [ngClass]="'id-table-width'"> Eventos </md-header-cell>
                     <md-cell *cdkCellDef="let row" [ngClass]="'id-table-width'"> {{row.numberOfEvents}} </md-cell>
                 </ng-container>
-        
+
                 <md-header-row *cdkHeaderRowDef="displayedColumnsColonies"></md-header-row>
                 <md-row *cdkRowDef="let row; columns: displayedColumnsColonies;"></md-row>
             </md-table>
         </div>
-    </md-grid-tile>
-</md-grid-list>
-<button md-raised-button (click)="refresh()">Actualizar</button>
+    </md-card>
+</div>
