Se corrige muestreo de puntos en mapa con coord vacias

--- a/src/app/heatmap/heatmap.css
+++ b/src/app/heatmap/heatmap.css
@@ -41,3 +41,10 @@ h3[_ngcontent-c5]{
 .colonia-table-width{
     flex: 2;
 }
+
+.graph-container{
+    display: block; 
+    width: 400px; 
+    height: 400px;
+    margin: auto;
+}
