--- a/src/app/routes.html
+++ b/src/app/routes.html
@@ -9,37 +9,72 @@
             <span class="fill-remaining-space"></span>
             <md-icon class="hand-cursor" (click)="sidenav.close()">clear</md-icon>
         </md-toolbar>
-        <h3>Busqueda</h3>
-        <md-card>
-            <md-card-title>
-                Fecha inicial
-            </md-card-title>
-            <md-card-content>
-                <div class="flex-inline">
-                    <md-input-container>
-                        <input mdInput type="date" [(ngModel)]="initDate">
-                    </md-input-container>
-                    <md-input-container class="margin-left">
-                        <input mdInput type="time" [(ngModel)]="initTime">
-                    </md-input-container>
+        <md-progress-bar color="warn" mode="indeterminate" *ngIf="isLoading"></md-progress-bar>
+        <div class="margin-left">
+            <h2>Busqueda</h2>
+            <div class="flex-inline">
+                <div>
+                    <h5>Fecha inicial</h5>
+                    <div class="flex-inline">
+                        <md-input-container>
+                            <input mdInput placeholder="Fecha" type="date" [(ngModel)]="initDate" [max]="maxDate">
+                        </md-input-container>
+                        <md-input-container class="margin-left">
+                            <input mdInput placeholder="Hora" type="time" [(ngModel)]="initTime">
+                        </md-input-container>
+                    </div>
                 </div>
-            </md-card-content>
-        </md-card>
-        <md-card>
-            <md-card-title>
-                Fecha final
-            </md-card-title>
-            <md-card-content>
-                <div class="flex-inline">
-                    <md-input-container>
-                        <input mdInput type="date" [(ngModel)]="endDate">
-                    </md-input-container>
-                    <md-input-container class="margin-left">
-                        <input mdInput type="time" [(ngModel)]="endTime">
-                    </md-input-container>
+                <div class="margin-left">
+                    <h5>Fecha final</h5>
+                    <div class="flex-inline">
+                        <md-input-container>
+                            <input mdInput placeholder="Fecha" type="date" [(ngModel)]="endDate" [max]="maxDate">
+                        </md-input-container>
+                        <md-input-container class="margin-left">
+                            <input mdInput placeholder="Hora" type="time" [(ngModel)]="endTime">
+                        </md-input-container>
+                    </div>
                 </div>
-            </md-card-content>
-        </md-card>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="margin-left">
+            <h5>Comandancia</h5>
+            <div>
+                <md-select placeholder="Colonia" [(ngModel)]="coloniaComandanciaSelected" style="width: 45%;">
+                    <md-option>Todas</md-option>
+                    <md-option *ngFor="let colonia of coloniasComandancia" [value]="colonia.id">
+                        <span>{{ colonia.colonia }}</span>
+                    </md-option>
+                </md-select>
+                <md-select placeholder="Delito" [(ngModel)]="tipoEventoComandanciaSelected" class="margin-left" style="width: 50%;">
+                    <md-option>Todos</md-option>
+                    <md-option *ngFor="let tipoEvento of tipoEventoComandancia" [value]="tipoEvento.id">
+                        <span mdTooltip={{tipoEvento.tipoEvento}} mdTooltipPosition="left">{{tipoEvento.id}} - {{ tipoEvento.tipoEvento }}</span>
+                    </md-option>
+                </md-select>
+            </div>
+            <br>
+            <br>
+            <h5>Iph</h5>
+            <div>
+                <md-select placeholder="Colonia" [(ngModel)]="coloniaIphSelected" style="width: 45%;">
+                    <md-option>Todas</md-option>
+                    <md-option *ngFor="let colonia of coloniasIph" [value]="colonia.id">
+                        <span>{{ colonia.colonia }}</span>
+                    </md-option>
+                </md-select>
+                <md-select placeholder="Delito" [(ngModel)]="tipoEventoIphSelected" class="margin-left" style="width: 50%;">
+                    <md-option>Todos</md-option>
+                    <md-option *ngFor="let tipoEvento of tipoEventoIph" [value]="tipoEvento.id">
+                        <span mdTooltip={{tipoEvento.tipoEvento}} mdTooltipPosition="left">{{tipoEvento.id}} - {{ tipoEvento.tipoEvento }}</span>
+                    </md-option>
+                </md-select>
+            </div>
+        </div>
+        <br>
+        <br>
         <button md-raised-button color="warn" (click)="sidenav.close(); sendRequest();" style="width: 100%;">Consultar</button>
     </md-sidenav>
     <router-outlet></router-outlet>
