--- a/src/app/heatmap/heatmap.html
+++ b/src/app/heatmap/heatmap.html
@@ -7,8 +7,7 @@
         <div>
             <h5>Parámetros de búsqueda</h5>
             <h6 class="query-params">{{queryIphFechas}}</h6>
-            <h6 class="query-params">{{queryIphColonia}}</h6>
-            <h6 class="query-params">{{queryIphTipoEvento}}</h6>
+            <h6 class="query-params">{{queryIphEvento}}</h6>
         </div>
         <br>
         <ngui-map zoom="11" [center]="centerpoint" class="map-margin">
@@ -23,8 +22,7 @@
         <div>
             <h5>Parámetros de búsqueda</h5>
             <h6 class="query-params">{{queryComandanciaFechas}}</h6>
-            <h6 class="query-params">{{queryComandanciaColonia}}</h6>
-            <h6 class="query-params">{{queryComandanciaTipoEvento}}</h6>
+            <h6 class="query-params">{{queryComandanciaEvento}}</h6>
         </div>
         <br>
         <ngui-map zoom="11" [center]="centerpoint" class="map-margin">
