--- a/src/app/routes.html
+++ b/src/app/routes.html
@@ -11,7 +11,7 @@
         </md-toolbar>
         <md-progress-bar color="warn" mode="indeterminate" *ngIf="isLoading"></md-progress-bar>
         <div class="margin-left">
-            <h2>Busqueda</h2>
+            <h2>Búsqueda</h2>
             <div class="flex-inline">
                 <div>
                     <h5>Fecha inicial</h5>
